# Sentinel-Live-Threat-Hunting-Agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_cli.py  selftest.py
agent/: config.py  llm.py  orchestrator.py  prompts.py
bright_data/: client.py  parsing.py
docs/: README.md  api-reference.md  architecture.md  getting-started.md  how-it-works.md  technologies.md  ui-guide.md
memory/: store.py
ui/: app.py
